@@ -251,8 +251,11 @@ this may change in the future, so do not count on this.
   |0| means ``fully transparent.'' A value like |0.5| will cause paths
   to be stroked in a semitransparent way.
 
-  \emph{Note:} This command does not work in conjunction with |dvips|
-  since PostScript does not support transparency.
+  \emph{Note:} In conjunction with |dvips| this command produces
+  PostScript code that works only with the most recent versions of
+  GhostScript  since PostScript does not support transparency
+  normally. Such PostScript code will not print and all other programs
+  will not be able to use it.
   
 \begin{codeexample}[]
 \begin{pgfpicture}
@@ -414,8 +417,8 @@ You can set which rule is used using the following commands:
 
   The ``filling transparency'' will also be used for text and images.  
   
-  \emph{Note again:} This command does not work in conjunction with
-  |dvips| since PostScript does not support transparency.
+  \emph{Note again:} This command produces unportable code in
+  conjunction with |dvips|.
   
 \begin{codeexample}[]
 \begin{tikzpicture}
